<?xml version="1.0"?>
<package>
  <name>worldlibjs</name>
  <version>0.0.1</version>
  <description>JavaScript library for the spatial world model.</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/worldlibjs</url>
  <url type="bugtracker">https://github.com/RobotWebTools/worldlibjs/issues</url>
  <url type="repository">https://github.com/RobotWebTools/worldlibjs</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
